--- a/src/Blogger/BlogBundle/Resources/views/Blog/show.html.twig
+++ b/src/Blogger/BlogBundle/Resources/views/Blog/show.html.twig
@@ -1,5 +1,9 @@
 {% extends 'BloggerBlogBundle::layout.html.twig' %}
 
+{#This one is the main template for blog, it includes the post, the view of the comments and one call to render the new,
+to get the form view#}
+
+
 {% block title %}{{ blog.title }}{% endblock %}
 
 {% block body %}
