--- a/src/Blogger/BlogBundle/Resources/views/Comment/create.html.twig
+++ b/src/Blogger/BlogBundle/Resources/views/Comment/create.html.twig
@@ -1,5 +1,7 @@
 {% extends 'BloggerBlogBundle::layout.html.twig' %}
 
+{#This one shows the form view#}
+
 {% block title %}Add Comment{% endblock%}
 
 {% block body %}
