--- a/src/Blogger/BlogBundle/Resources/views/Comment/form.html.twig
+++ b/src/Blogger/BlogBundle/Resources/views/Comment/form.html.twig
@@ -1,5 +1,7 @@
 {# src/Blogger/BlogBundle/Resources/views/Comment/form.html.twig #}
 
+{# This one renders the Form, and call to createAction, that is what sends the comment #}
+
 <form action="{{ path('BloggerBlogBundle_comment_create', { 'blog_id' : comment.blog.id } ) }}" method="post" {{ form_enctype(form) }} class="blogger">
     {{ form_widget(form) }}
     <p>
