--- a/src/Blogger/BlogBundle/Resources/views/Page/about.html.twig
+++ b/src/Blogger/BlogBundle/Resources/views/Page/about.html.twig
@@ -1,4 +1,6 @@
 {# src/Blogger/BlogBundle/Resources/views/Page/about.html.twig #}
+{#Just show the about view#}
+
 {% extends 'BloggerBlogBundle::layout.html.twig' %}
 
 {% block title %}About{% endblock%}
