--- a/src/Blogger/BlogBundle/Resources/views/Page/about.html.twig
+++ b/src/Blogger/BlogBundle/Resources/views/Page/about.html.twig
@@ -20,4 +20,17 @@
         lacus nisl. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
         posuere cubilia Curae.</p>
     </article>
+    
+    <br><br><br>
+    
+    
+    {##########*_ Rendering graphics controller _*###########}
+    
+{% render "BloggerBlogBundle:Mistakes:graf"  %}
+    
+
+    
+    
+    
+    
 {% endblock %}
