--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,6 +3,23 @@
     <head>
             <meta http-equiv="Content-Type" content="text/html"; charset=utf-8" />
             <title>{% block title %}symblog{% endblock %} - symblog</title>
+            
+         <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" /> 
+        <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+        <script type="text/javascript"> //Para las gráficas
+            google.load("visualization", "1", {packages:["corechart", 'table', 'treemap', 'gauge']});
+            google.load('jquery', '1.6.0');
+        </script>
+            
+            
+    </head>
+            
+            
+            
+            
+            
+            
+            
             <!--[if lt IE 9]>
                 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
