--- a/src/Blogger/BlogBundle/Resources/views/Page/about.html.twig
+++ b/src/Blogger/BlogBundle/Resources/views/Page/about.html.twig
@@ -1,5 +1,5 @@
 {# src/Blogger/BlogBundle/Resources/views/Page/about.html.twig #}
-{#Just show the about view#}
+{# Just show the about view #}
 
 {% extends 'BloggerBlogBundle::layout.html.twig' %}
 
@@ -19,18 +19,11 @@
         vehicula commodo a placerat lacus. Mauris at est elit, nec vehicula urna. Duis a
         lacus nisl. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
         posuere cubilia Curae.</p>
-    </article>
-    
+    </article>   
     <br><br><br>
     
+{#_ Rendering graphics controller _#}
     
-    {##########*_ Rendering graphics controller _*###########}
-    
-{% render "BloggerBlogBundle:Mistakes:graf"  %}
-    
-
-    
-    
-    
+{% render "BloggerBlogBundle:Mistakes:graf"  %} 
     
 {% endblock %}
